--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,22 @@
+spring:
+  datasource:
+    url: jdbc:h2:file:./database
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+
+
+
+app:
+  timeanalysistool:
+    jwtSecret: adiSrcretKey
+    jwtExpirationMs: 86400000
+
 
